[gd_scene load_steps=27 format=1]

[ext_resource path="res://JetpackGameMode/GameOverScreen/LevelCompleteScreen.gd" type="Script" id=1]
[ext_resource path="res://JetpackGameMode/GameOverScreen/textures/cleared_smear_effect.png" type="Texture" id=2]
[ext_resource path="res://JetpackGameMode/GameOverScreen/textures/background_glow.png" type="Texture" id=3]
[ext_resource path="res://Fonts/OrbitronBlack60.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Fonts/OrbitronMedium60.fnt" type="BitmapFont" id=5]
[ext_resource path="res://JetpackGameMode/GameOverScreen/textures/end_screen_divisor_line.png" type="Texture" id=6]
[ext_resource path="res://JetpackGameMode/GameOverScreen/textures/cleared_text.png" type="Texture" id=7]
[ext_resource path="res://Fonts/OrbitronMedium30.fnt" type="BitmapFont" id=8]
[ext_resource path="res://Fonts/OrbitronBlack72.fnt" type="BitmapFont" id=9]
[ext_resource path="res://Fonts/OrbitronBlack30.fnt" type="BitmapFont" id=10]
[ext_resource path="res://CommonScenes/Buttons/BlueScreen110Theme.tres" type="Theme" id=11]
[ext_resource path="res://CommonScenes/Buttons/icons/home_icon.png" type="Texture" id=12]
[ext_resource path="res://CommonScenes/Button.gd" type="Script" id=13]
[ext_resource path="res://CommonScenes/Buttons/icons/upgrade_icon.png" type="Texture" id=14]
[ext_resource path="res://CommonScenes/Buttons/icons/retry_icon.png" type="Texture" id=15]
[ext_resource path="res://CommonScenes/Buttons/icons/stages_icon.png" type="Texture" id=16]
[ext_resource path="res://CommonScenes/Buttons/icons/play_icon.png" type="Texture" id=17]
[ext_resource path="res://CommonScenes/pallet.png" type="Texture" id=18]


[sub_resource type="Animation" id=1]

resource/name = "base"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="ImageTexture" id=3]

flags = 5
image = Image( 256, 1, 0, GRAYSCALE, 0, 1, 2, 3, 4, 5, 6, 7, 8, 8, 9, 10, 11, 12, 13, 14, 15, 16, 16, 17, 18, 19, 20, 21, 22, 23, 23, 24, 25, 26, 27, 28, 29, 30, 30, 31, 32, 33, 34, 35, 36, 37, 38, 38, 39, 40, 41, 42, 43, 44, 45, 45, 46, 47, 48, 49, 50, 51, 52, 53, 53, 54, 55, 56, 57, 58, 59, 60, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 69, 70, 71, 72, 73, 74, 75, 76, 77, 77, 78, 79, 80, 81, 82, 83, 84, 85, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 146, 148, 148, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 173, 174, 175, 176, 177, 178, 179, 180, 181, 183, 184, 185, 186, 187, 188, 190, 191, 192, 193, 194, 195, 197, 198, 199, 200, 201, 203, 204, 205, 206, 207, 209, 210, 211, 212, 214, 215, 216, 217, 219, 220, 221, 223, 224, 225, 226, 228, 229, 230, 231, 233, 234, 235, 237, 238, 239, 241, 242, 243, 244, 246, 247, 248, 249, 251, 252, 253, 254, 255 )
size = Vector2( 256, 1 )
storage = 0
lossy_quality = 0.7

[sub_resource type="CanvasItemShaderGraph" id=4]

_code = {
"default_tex": [ "cmap_3", SubResource( 3 ) ],
"fragment": "vec3 nd1sl3=vec3(SCREEN_UV,0);
uniform color Start=vec4(1,0.819608,0,1);
vec3 nd5sl0=Start.rgb;
float nd5sl1=Start.a;
float nd2sl0=nd1sl3.x;
float nd2sl1=nd1sl3.y;
float nd2sl2=nd1sl3.z;
uniform texture cmap_3;
float nd3sl0=tex(cmap_3,vec2(nd2sl0,0)).r;
uniform color End=vec4(1,0.266667,0.490196,1);
vec3 nd6sl0=End.rgb;
float nd6sl1=End.a;
vec3 nd4sl0=mix(nd5sl0,nd6sl0,nd3sl0);
COLOR.rgb=nd4sl0;
",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}
_data = {
"shaders": [ [ 0, 33, Vector2( 350, 40 ), null, null, [  ], 1, 0, Vector2( 50, 40 ), null, null, [  ] ], [ 0, 33, Vector2( 757, 113 ), null, null, [ 0, 4, 0 ], 1, 0, Vector2( -52, 123 ), null, null, [  ], 2, 18, Vector2( 89.197, 255 ), null, null, [ 0, 1, 3, 2147483647, 0, null ], 3, 25, Vector2( 323, 274 ), Vector2Array( 0.65625, 0.59375 ), null, [ 0, 2, 0, 2147483647, 0, null ], 4, 23, Vector2( 502, 50 ), null, null, [ 0, 5, 0, 1, 6, 0, 2, 3, 0, 2147483647, 0, null, 2147483647, 1, null, 2147483647, 2, null ], 5, 28, Vector2( 155.197, 5 ), "Start", Color( 1, 0.819608, 0, 1 ), [  ], 6, 28, Vector2( 182, 139 ), "End", Color( 1, 0.266667, 0.490196, 1 ), [  ] ], [ 0, 33, Vector2( 350, 40 ), null, null, [  ], 1, 0, Vector2( 50, 40 ), null, null, [  ] ] ]
}

[sub_resource type="CanvasItemMaterial" id=5]

shader/shader = SubResource( 4 )
shader/shading_mode = 0
shader_param/Start = Color( 0.699568, 0, 0.932087, 1 )
shader_param/End = Color( 0.386945, 0.947378, 0.879722, 1 )

[sub_resource type="Animation" id=6]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/material:shader_param/Start")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.4, 0.6, 0.6, 0.8, 0.8, 1, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.819608, 0, 1 ), Color( 0.242188, 1, 0, 1 ), Color( 0, 1, 0.671875, 1 ), Color( 0, 1, 0.671875, 1 ), Color( 0.640625, 0, 1, 1 ), Color( 0.640625, 0, 1, 1 ), Color( 1, 0, 0.585938, 1 ), Color( 1, 0, 0.585938, 1 ), Color( 1, 0.819608, 0, 1 ), Color( 1, 0.819608, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material/material:shader_param/End")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.4, 0.6, 0.6, 0.8, 0.8, 1, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.266667, 0.486275, 1 ), Color( 1, 0.902604, 0.266667, 1 ), Color( 0.702083, 1, 0.266667, 1 ), Color( 0.702083, 1, 0.266667, 1 ), Color( 0.266667, 1, 1, 1 ), Color( 0.266667, 1, 1, 1 ), Color( 1, 0.679167, 0.266667, 1 ), Color( 1, 0.679167, 0.266667, 1 ), Color( 1, 0.266667, 0.486275, 1 ), Color( 1, 0.266667, 0.486275, 1 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Arcade:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 125 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Speedrun:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 196 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Speedrun:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arcade:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]

length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Arcade:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.6, 0.8 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 125 ), Vector2( 0, 125 ), Vector2( 0, -25 ), Vector2( 0, 25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arcade:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3, 0.8 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Speedrun:rect/pos")
tracks/2/interp = 2
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 196 ), Vector2( 0, 46 ), Vector2( 0, 96 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Speedrun:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="LevelCompleteScreen" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )
main_menu_path = "res://CommonScenes/MainMenu/MainMenuScreen.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/base = SubResource( 1 )
"anims/fade out" = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "base"

[node name="ColorFrame" type="ColorFrame" parent="."]

visibility/opacity = 0.6
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = -13.0
margin/right = 1932.0
margin/bottom = 1067.0
color = Color( 0.25098, 0.054902, 0.160784, 1 )

[node name="StageClearedContainer" type="Control" parent="."]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 32.0
margin/right = -1856.0
margin/bottom = -483.0

[node name="ClearedSmear" type="TextureFrame" parent="StageClearedContainer"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 644.0
margin/top = 56.5
margin/right = -636.0
margin/bottom = -189.5
texture = ExtResource( 2 )
stretch_mode = 0

[node name="BackLight" type="TextureFrame" parent="StageClearedContainer"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 370.0
margin/top = 0.0
margin/right = -386.0
margin/bottom = 836.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="LevelText" type="HBoxContainer" parent="StageClearedContainer"]

editor/display_folded = true
visibility/opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 125.0
margin/right = 1920.0
margin/bottom = 196.0
custom_constants/separation = 30
alignment = 1

[node name="StageNumber" type="Label" parent="StageClearedContainer/LevelText"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 122.0
margin/top = 0.0
margin/right = 455.0
margin/bottom = 71.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.443137, 0.443137, 1, 1 )
text = "STAGE 12"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StageName" type="Label" parent="StageClearedContainer/LevelText"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 485.0
margin/top = 0.0
margin/right = 1797.0
margin/bottom = 71.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.443137, 0.443137, 1, 1 )
text = "If that was the 'Calm', what is the 'Storm'?!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DivisorLineTop" type="TextureFrame" parent="StageClearedContainer"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 520.0
margin/top = 101.0
margin/right = -549.0
margin/bottom = 112.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="DivisorLineBottom" type="TextureFrame" parent="StageClearedContainer"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 520.0
margin/top = 421.0
margin/right = -549.0
margin/bottom = 432.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Cleared" type="TextureFrame" parent="StageClearedContainer"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 584.0
margin/top = 84.5
margin/right = -580.0
margin/bottom = -161.5
texture = ExtResource( 7 )
stretch_mode = 0

[node name="ResultsContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 503.0
margin/right = 1920.0
margin/bottom = 1004.0
custom_constants/separation = 50
alignment = 2

[node name="ModeUnlock" type="VBoxContainer" parent="ResultsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 142.0
custom_constants/separation = 0
alignment = 1

[node name="Arcade" type="Label" parent="ResultsContainer/ModeUnlock"]

editor/display_folded = true
visibility/opacity = 0.0
material/material = SubResource( 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 125.0
margin/right = 1920.0
margin/bottom = 196.0
custom_fonts/font = ExtResource( 4 )
text = "ARCADE MODE UNLOCKED!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer1" type="AnimationPlayer" parent="ResultsContainer/ModeUnlock/Arcade"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/text_anim = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "text_anim"

[node name="Speedrun" type="Label" parent="ResultsContainer/ModeUnlock"]

editor/display_folded = true
visibility/opacity = 0.0
material/material = SubResource( 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 196.0
margin/right = 1920.0
margin/bottom = 267.0
custom_fonts/font = ExtResource( 4 )
text = "SPEEDRUN MODE UNLOCKED!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer2" type="AnimationPlayer" parent="ResultsContainer/ModeUnlock/Speedrun"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/text_anim = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "text_anim"

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultsContainer/ModeUnlock"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/base = SubResource( 7 )
anims/unlock = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "base"

[node name="ScoreResults" type="HBoxContainer" parent="ResultsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 192.0
margin/right = 1920.0
margin/bottom = 341.0
custom_constants/separation = 50
alignment = 1

[node name="HighScoreContainer" type="VBoxContainer" parent="ResultsContainer/ScoreResults"]

rect/min_size = Vector2( 426, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 313.0
margin/top = 0.0
margin/right = 739.0
margin/bottom = 149.0
custom_constants/separation = -2
alignment = 0

[node name="PrevHighscore" type="Label" parent="ResultsContainer/ScoreResults/HighScoreContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 426.0
margin/bottom = 37.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.443137, 0.443137, 1, 1 )
text = "Best Score:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Highscore" type="Label" parent="ResultsContainer/ScoreResults/HighScoreContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 35.0
margin/right = 426.0
margin/bottom = 106.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.266667, 0.65098, 1, 1 )
text = "0000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreContainer" type="VBoxContainer" parent="ResultsContainer/ScoreResults"]

editor/display_folded = true
rect/min_size = Vector2( 416, 149 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 789.0
margin/top = 0.0
margin/right = 1205.0
margin/bottom = 149.0
custom_constants/separation = -5
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="YourScore" type="Label" parent="ResultsContainer/ScoreResults/ScoreContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 416.0
margin/bottom = 37.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.443137, 0.443137, 1, 1 )
text = "Scored:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="ResultsContainer/ScoreResults/ScoreContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 32.0
margin/right = 416.0
margin/bottom = 118.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.266667, 0.65098, 1, 1 )
text = "0000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighscoreText" type="Label" parent="ResultsContainer/ScoreResults/ScoreContainer"]

material/material = SubResource( 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 113.0
margin/right = 416.0
margin/bottom = 149.0
custom_fonts/font = ExtResource( 10 )
text = "IT'S A NEW HIGHSCORE!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultsContainer/ScoreResults/ScoreContainer/HighscoreText"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/text_anim = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "text_anim"

[node name="UpgradeContainer" type="VBoxContainer" parent="ResultsContainer/ScoreResults"]

rect/min_size = Vector2( 351, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1255.0
margin/top = 0.0
margin/right = 1606.0
margin/bottom = 149.0
custom_constants/separation = -2
alignment = 0

[node name="UpgradeText" type="Label" parent="ResultsContainer/ScoreResults/UpgradeContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 351.0
margin/bottom = 37.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.443137, 0.443137, 1, 1 )
text = "Upgrade Points:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="UpgradePoints" type="Label" parent="ResultsContainer/ScoreResults/UpgradeContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 35.0
margin/right = 351.0
margin/bottom = 106.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.266667, 0.65098, 1, 1 )
text = "00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TimeResults" type="HBoxContainer" parent="ResultsContainer"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 398.0
margin/right = 1920.0
margin/bottom = 547.0
custom_constants/separation = 50
alignment = 1

[node name="HighTimeContainer" type="VBoxContainer" parent="ResultsContainer/TimeResults"]

rect/min_size = Vector2( 426, 149 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 514.0
margin/top = 0.0
margin/right = 940.0
margin/bottom = 149.0
custom_constants/separation = -2
alignment = 0

[node name="PrevHighTime" type="Label" parent="ResultsContainer/TimeResults/HighTimeContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 426.0
margin/bottom = 37.0
custom_fonts/font = ExtResource( 8 )
text = "Best Time:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighTime" type="Label" parent="ResultsContainer/TimeResults/HighTimeContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 35.0
margin/right = 426.0
margin/bottom = 106.0
custom_fonts/font = ExtResource( 4 )
text = "0000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TimeContainer" type="VBoxContainer" parent="ResultsContainer/TimeResults"]

rect/min_size = Vector2( 416, 149 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 990.0
margin/top = 0.0
margin/right = 1406.0
margin/bottom = 149.0
custom_constants/separation = -5
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="YourTime" type="Label" parent="ResultsContainer/TimeResults/TimeContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 416.0
margin/bottom = 37.0
custom_fonts/font = ExtResource( 8 )
text = "Time:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Time" type="Label" parent="ResultsContainer/TimeResults/TimeContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 32.0
margin/right = 416.0
margin/bottom = 118.0
custom_fonts/font = ExtResource( 9 )
text = "0000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HightimeText" type="Label" parent="ResultsContainer/TimeResults/TimeContainer"]

editor/display_folded = true
visibility/visible = false
material/material = SubResource( 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 113.0
margin/right = 416.0
margin/bottom = 149.0
custom_fonts/font = ExtResource( 10 )
text = "IT'S A NEW RECORD!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultsContainer/TimeResults/TimeContainer/HightimeText"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/text_anim = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "text_anim"

[node name="Buttons" type="HBoxContainer" parent="ResultsContainer"]

rect/min_size = Vector2( 0, 110 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 11 )
margin/left = 0.0
margin/top = 391.0
margin/right = 1920.0
margin/bottom = 501.0
alignment = 1

[node name="Quit" type="Button" parent="ResultsContainer/Buttons"]

rect/min_size = Vector2( 192, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 86.0
margin/top = 0.0
margin/right = 431.0
margin/bottom = 110.0
custom_constants/hseparation = 15
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
icon = ExtResource( 12 )
flat = false
script/script = ExtResource( 13 )
pressed_sfx = "ui_confirm"

[node name="Upgrade" type="Button" parent="ResultsContainer/Buttons"]

rect/min_size = Vector2( 192, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 435.0
margin/top = 0.0
margin/right = 734.0
margin/bottom = 110.0
custom_constants/hseparation = 15
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Upgrade"
icon = ExtResource( 14 )
flat = false
script/script = ExtResource( 13 )
pressed_sfx = "ui_change"

[node name="Replay" type="Button" parent="ResultsContainer/Buttons"]

rect/min_size = Vector2( 192, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 738.0
margin/top = 0.0
margin/right = 1088.0
margin/bottom = 110.0
custom_constants/hseparation = 15
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play Again"
icon = ExtResource( 15 )
flat = false
script/script = ExtResource( 13 )
pressed_sfx = "ui_confirm"

[node name="LevelSelect" type="Button" parent="ResultsContainer/Buttons"]

rect/min_size = Vector2( 192, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1092.0
margin/top = 0.0
margin/right = 1480.0
margin/bottom = 110.0
custom_constants/hseparation = 15
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level Select"
icon = ExtResource( 16 )
flat = false
script/script = ExtResource( 13 )
pressed_sfx = "ui_change"

[node name="NextLevel" type="Button" parent="ResultsContainer/Buttons"]

rect/min_size = Vector2( 192, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1484.0
margin/top = 0.0
margin/right = 1834.0
margin/bottom = 110.0
custom_constants/hseparation = 15
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Next Level"
icon = ExtResource( 17 )
flat = false
script/script = ExtResource( 13 )
pressed_sfx = "ui_confirm"

[node name="pallet" type="Sprite" parent="."]

transform/pos = Vector2( 939.719, 1266.79 )
texture = ExtResource( 18 )

[connection signal="pressed" from="ResultsContainer/Buttons/Quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="ResultsContainer/Buttons/Upgrade" to="." method="_on_upgrade_pressed"]

[connection signal="pressed" from="ResultsContainer/Buttons/Replay" to="." method="_on_replay_pressed"]

[connection signal="pressed" from="ResultsContainer/Buttons/LevelSelect" to="." method="_on_LevelSelect_pressed"]

[connection signal="pressed" from="ResultsContainer/Buttons/NextLevel" to="." method="_on_NextLevel_pressed"]


